@@ -78,6 +78,7 @@
         <file>icons-png/type_unknown.png</file>
         <file>icons-png/type_url.png</file>
         <file>icons-png/type_vcd.png</file>
+        <file>icons-png/type_tv.png</file>
         <file>icons-png/type_video.png</file>
         <file>icons-png/url_big.png</file>
         <file>icons-png/pref_associations.png</file>
